--- a/JavaScript/14.Cas/Login.css
+++ b/JavaScript/14.Cas/Login.css
@@ -27,7 +27,12 @@ h1 {
 
 #login-form input[type="submit"] {
   width: 100%;
-  background-color: #4caf50;
+  background-image: linear-gradient(
+    to right,
+    #0f2027,
+    rgb(22, 181, 181),
+    #2c5364
+  );
   color: white;
   border: none;
   border-radius: 3px;
@@ -35,11 +40,10 @@ h1 {
   box-sizing: border-box;
   cursor: pointer;
 }
-
-#login-form input[type="submit"]:hover {
-  background-color: #45a049;
-}
 body {
   background: linear-gradient(to right, #0f2027, rgb(22, 181, 181), #2c5364);
   font-family: "Poppins", sans-serif;
+}
+.error {
+  color: red;
 }
