--- a/JavaScript/Validation/Login.css
+++ b/JavaScript/Validation/Login.css
@@ -1,32 +1,51 @@
-#login-form {
-  width: 35%;
-  margin: 0 auto;
-  /* border: 1px solid black; */
-  border-radius: 5px;
-  padding: 20px;
+* {
+  padding: 0;
+  margin: 0;
+}
+body {
+  /* background: url(bg_img.jpg) no-repeat; */
+  background-size: cover;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  font-family: sans-serif;
+}
+.container {
+  position: relative;
   margin-top: 100px;
-  background-color: whitesmoke;
+  width: 450px;
+  height: auto;
+  background: whitesmoke;
+  border-radius: 5px;
 }
-h1 {
-  text-align: center;
-}
-#login-form label {
+.label {
+  padding: 20px 130px;
+  font-size: 35px;
   font-weight: bold;
-  display: block;
-  margin-bottom: 10px;
+  /* color: #130f40; */
 }
-
-#login-form input[type="text"],
-#login-form input[type="password"] {
-  width: 100%;
-  border: 1px solid #ddd;
-  border-radius: 3px;
-  padding: 8px;
-  box-sizing: border-box;
+.login_form {
+  padding: 20px 40px;
 }
-
-#login-form input[type="submit"] {
+.login_form .font {
+  font-size: 18px;
+  /* color: #130f40; */
+  margin: 5px 0;
+}
+.login_form input {
+  height: 40px;
   width: 100%;
+  padding: 0 5px;
+  font-size: 18px;
+  outline: none;
+  border: 1px solid silver;
+}
+.login_form .font2 {
+  margin-top: 30px;
+}
+.login_form button {
+  width: 100%;
+  text-decoration: none;
   background-image: linear-gradient(
     to right,
     #0f2027,
@@ -34,16 +53,31 @@ h1 {
     #2c5364
   );
   color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
   border: none;
-  border-radius: 3px;
-  padding: 8px;
-  box-sizing: border-box;
+  border-radius: 4px;
   cursor: pointer;
+}
+.login_form #email_error,
+.login_form #pass_error {
+  margin-top: 5px;
+  width: 345px;
+  font-size: 18px;
+  color: #c62828;
+  background: rgba(255, 0, 0, 0.1);
+  text-align: center;
+  padding: 5px 8px;
+  border-radius: 3px;
+  border: 1px solid #ef9a9a;
+  display: none;
 }
 body {
   background: linear-gradient(to right, #0f2027, rgb(22, 181, 181), #2c5364);
   font-family: "Poppins", sans-serif;
 }
-.error {
-  color: red;
+a[type="alog"] {
+  text-decoration: none;
+  color: black;
+  font-style: bold;
 }
