--- a/JavaScript/Validation/Home.css
+++ b/JavaScript/Validation/Home.css
@@ -3,7 +3,7 @@ h1 {
   padding-top: 20%;
 }
 body {
-  background: linear-gradient(to right, #0f2027, rgb(22, 181, 181), #2c5364);
+  background: linear-gradient(to right, #0f2027, rgb(41, 94, 94), #2c5364);
   font-family: "Poppins", sans-serif;
 }
 button[type="register"] {
@@ -18,7 +18,18 @@ button[type="login"] {
   height: 50px;
   line-break: normal;
 }
+button:hover {
+  background-color: #2c5364;
+}
 a {
   color: black;
   text-decoration: none;
+}
+#particles-js {
+  position: absolute;
+  z-index: -1;
+  left: 0;
+  top: 0;
+  height: 100vh;
+  width: 100%;
 }
