--- a/JavaScript/Sidebar/index.css
+++ b/JavaScript/Sidebar/index.css
@@ -2,11 +2,26 @@
   margin: 0;
   padding: 0;
 }
+body {
+  background: #12181b;
+}
 .btn_open {
   width: 40px;
-  height: 35px;
+  height: 30px;
   margin-left: 95%;
   margin-top: 10px;
+  cursor: pointer;
+}
+.left-sidebar {
+  box-shadow: 10px 10xp 10px 10px black;
+  width: 200px;
+  height: 100%;
+  background-color: rgba(245, 245, 245, 0.775);
+}
+.close_btn {
+  margin-left: 170px;
+  width: 30px;
+  height: 30px;
   cursor: pointer;
 }
 ul {
@@ -22,20 +37,11 @@ a {
   font-size: 20px;
   padding-bottom: 40px;
 }
-.left-sidebar {
-  box-shadow: 10px 10xp 10px 10px black;
-  width: 200px;
-  height: 629px;
-  background-color: rgb(201, 191, 191);
+.footer_icons {
+  margin-top: 160%;
+  margin-left: 5%;
+  padding-bottom: 20%;
 }
-.close_btn {
-  margin-left: 170px;
-  width: 30px;
-  height: 30px;
-  cursor: pointer;
-  /* background-color: cyan; */
-  /* border: none; */
-}
-.main {
-  margin-left: 200px;
+.icons {
+  font-size: 33px;
 }
