--- a/JavaScript/Sidebar/index.css
+++ b/JavaScript/Sidebar/index.css
@@ -3,7 +3,18 @@
   padding: 0;
 }
 body {
-  background: #12181b;
+  background-image: linear-gradient(
+      rgba(0, 0, 0, 0.6) 100%,
+      rgba(0, 0, 0, 0.6) 100%
+    ),
+    url("https://images.unsplash.com/photo-1560780552-ba54683cb263?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80");
+
+  background-color: rgb(34, 34, 34);
+  background-size: cover;
+  background-position: center;
+  max-width: 2560px;
+  height: 100%;
+  margin: 0 auto;
 }
 .btn_open {
   width: 40px;
