--- a/JavaScript/Calendar/style.css
+++ b/JavaScript/Calendar/style.css
@@ -20,3 +20,11 @@
   border: none;
   cursor: pointer;
 }
+
+/* Styling for the month name */
+.calendar .haed h1#name {
+  font-size: 2.5rem;
+  font-weight: bold;
+  text-transform: uppercase;
+  margin: 0;
+}
