--- a/React/react-scores-app/src/App.css
+++ b/React/react-scores-app/src/App.css
@@ -1,8 +1,36 @@
-.App {
+* {
+  padding: 0;
+  margin: 0;
+}
+
+.app {
   text-align: center;
   background-color: #282c34;
   width: 100%;
   height: 100vh;
+}
+.title {
+  color: white;
+}
+.scores-container {
+  background-color: #61dafb;
+  display: flex;
+  justify-content: center;
+  gap: 100px;
+  padding: 50px;
+}
+
+.score-card {
+  border: 1px solid black;
+  padding: 20px 50px;
+  border-radius: 10px;
+}
+.score-card button {
+  background-color: white;
+  border: none;
+  margin-top: 10px;
+  width: 70px;
+  height: 25px;
 }
 
 .App-logo {
