--- a/React/score-game-app/src/App.css
+++ b/React/score-game-app/src/App.css
@@ -1,5 +1,27 @@
-.App {
+* {
+  padding: 0;
+  margin: 0;
+}
+
+.app {
   text-align: center;
+  background-color: #282c34;
+  width: 100%;
+  height: 100vh;
+}
+
+.scores-container {
+  background-color: #61dafb;
+  display: flex;
+  justify-content: center;
+  gap: 100px;
+  padding: 50px;
+}
+
+.score-card {
+  border: 1px solid black;
+  padding: 20px 50px;
+  border-radius: 10px;
 }
 
 .App-logo {
